--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    padding-bottom: 40px;
 }
 .bannercarousel1 {
     background-image: url("../content/background.jpg");
@@ -113,4 +114,35 @@ body {
     min-height: 450px;
     background-repeat: no-repeat;
     background-position: center;
+}
+.imgservicos{
+    height: 36px ;
+    float: left;
+    margin-top: 5px;
+}
+.imgservicosw{
+    width: 36px ;
+    float: left;
+    margin-top: 4px;
+}
+.tituloservicos{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #f9f9f9;
+    padding: 20px;
+    border: 5px;
+}
+.labelservicos{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #666666;
+    margin-left: 50px;
+    margin-top: 14px;
+
+}
+.shadow{
+    box-shadow: 0px 10px 15px #888888;
+}
+.panelservicos{
+    min-height: 250px;
 }
