adicionando as metas
Adicionando as metas para indexacao do google

--- a/css/index.css
+++ b/css/index.css
@@ -174,13 +174,13 @@ margin-right: 0px;
 }
 .labelSobreTitulo{
     font-family:  vijaya,helvetica, Arial, sans-serif;
-    color: #230d99;
+    color: #ffffff;
     margin-n-top: 14px;
     font-size: 48pt;
 }
 .textoSobre{
     font-family:  helvetica, Arial, sans-serif;
-    color: #999999;
+    color: #cccccc;
     font-style: italic;
     font-size: 15pt;
 }
