--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ body {
     height: 100% !important;
 }
 .sectionForm{
-    background-image: url("../content/fundoformulario.jpg");
+    background-image: url("../content/fundoformulario.png");
     min-height: 450px;
     background-repeat: no-repeat;
     background-position: center;
