Ajustando google maps
Ajustando scrolling do google maps

--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,7 @@ body {
     left: 0;
     width: 100% !important;
     height: 100% !important;
+    pointer-events: none;
 }
 .sectionForm{
     background-image: url("../content/fundoformulario.png");
